--- a/intro_whole_game.qmd
+++ b/intro_whole_game.qmd
@@ -1,87 +1,127 @@
 
-# 데이터 과학 맛보기
+# 데이터 과학 큰 그림
 
 데이터 과학을 각 부분별로 나눠서 상세히 살펴보는 대신 데이터 과학을 구성하는 데이터 가져오기(Import), 깔끔화(Tidy), 변환(Transform) 및 시각화(visualize)에 대해 전체적인 작업흐름을 신속히 일별하고 시작하는 것이
 최근의 추세다. 다양한 데이터에 대한 이해와 분석 경험이 쌓이면서 `tidyverse` 가 새롭게 출현했고,
-관련하여 데이터 문법(grammar of data), 그래프 문법(grammar of graphics), 표문법(grammar of table)이 
-`tidyverse`의 중추를 이루는데 각각을 자세히 살펴보기에 앞서 데이터 과학 맛보기를 통해 전반적인 
-흐름을 살펴보자.
+관련하여 데이터 문법(grammar of data), 그래프 문법(grammar of graphics), 표문법(grammar of table)이 `tidyverse`의 중추를 이루는데 각각을 자세히 살펴보기에 앞서 데이터 과학 맛보기를 통해 전반적인 흐름을 살펴보자.
 
-![`tidyverse` 작업흐름](images/tidyverse_framework.jpg)
+```{mermaid}
+%%| fig-align: center
+%%| fig-cap: 챗GPT 데이터 과학 큰 그림
+%%| label: fig-whole-game
+
+graph TB
+    subgraph Software["<strong>좋은 소프트웨어 개발(사람) + 챗GPT(인공지능)</strong>"]
+        subgraph 이해하기
+            모형 --> 시각화
+            변환 --> 모형
+            시각화 --> 변환
+            
+        end
+    가져오기 --> 깔끔화 --> 이해하기
+    이해하기 --> 의사소통
+
+    AI["챗GPT(LLM)"]
+
+    end
+    
+    classDef modern fill:#fff,stroke:#333,stroke-width:2px,color:#333,font-family:MaruBuri,font-size:12px;
+    classDef emphasize fill:#8CBDE3,stroke:#333,stroke-width:3px,color:#333,font-family:MaruBuri,font-size:15px,font-weight:bold;
+    classDef subgraphStyle fill:#f0f8ff,stroke:#333,stroke-width:2px,color:#333,font-family:MaruBuri,font-size:15px;
+    
+    class 모형 modern
+    class 가져오기,깔끔화,변환,시각화,의사소통 emphasize
+    class 이해하기 subgraphStyle
+```
+
+백의 천사로도 잘 알려진 플로렌스 나이팅게일 사례는 데이터 과학의 전체 과정(whole game)을 잘 보여주는 대표적인 사례다. 나이팅게일은 단순히 데이터를 수집하고 분석하는 것에 그치지 않고, 데이터에서 얻은 통찰을 실제 세계에 적용하여 변화를 이끌어냈기 때문이다.
+
+나이팅게일은 크림 전쟁 당시 병원에서 데이터를 수집하고 분석하여 사망 원인의 대부분이 열악한 위생 환경에서 비롯된 감염성 질병이라는 사실을 발견했다. 하지만 발견한 것에서 만족하지 않고 열악한 병원 환경 개선을 위한 캠페인을 펼쳤다.
+
+이 과정에서 나이팅게일은 수집된 소중한 데이터를 시각화하여 설득력 있게 전달하는 방법을 고민했고, 그 결과 로즈 다이어그램(Rose Diagram)이라는 새로운 형태의 시각화 그래프를 고안해냈다. 이는 당시로서는 획기적인 데이터 시각화 방식이었으며, 최고 의사결정권자인 여왕은 물론 일반 대중에게 데이터의 의미를 쉽게 이해할 수 있도록 커뮤니케이션에 적극 활용되었다.
+
+나이팅게일의 노력은 병원 내 사망률을 크게 낮추는 성과로 이어졌고, 군 의료 체계 전반의 개혁으로 이어져 수많은 소중한 생명을 살렸을 뿐만 아니라, 공중보건에 대한 사회적 인식을 높이고, 간호사의 전문성을 향상시키는 계기가 되었다.
+
+이처럼 나이팅게일의 사례는 데이터 수집, 분석, 시각화, 그리고 실제 행동과 변화까지, 데이터 과학의 전 과정을 포괄하고 있다. 데이터 과학이 단순히 데이터를 다루는 기술이 아니라, 데이터를 통해 세상을 이해하고 변화시키는 전체적인 과정임을 잘 보여주는 사례라고 할 수 있다. 따라서 데이터 과학을 배우는 모두에게 나이팅게일의 사례는 데이터 과학 전 과정을 짧은 시간에 이해하는 데 좋은 출발점이 될 것이다.
 
 
 ## 나이팅게일 신화탄생
 
-### 배경
+\index{크림 전쟁} \index{스쿠타리 병원} \index{나이팅게일}
 
-크림 전쟁은 1853년부터 1856년까지 일어난 큰 전쟁이었다. 
-한쪽에는 러시아, 반면 다른 한쪽에는 영국, 프랑스, 오스만 제국 (현대 투르키에), 그리고 나중에 사르디니아 (현대 이탈리아의 일부)가 동맹을 구성하여 전쟁을 치뤘다. 
-전쟁이 바로 시작된 이유는 러시아가 오스만 제국 내 정교회 신자들을 보호하려 하려는 명분을 내세웠지만, 사실 더많은 영토를 차지하기 위함이였다. 양측간 전쟁은 흑해를 두고 남하하는 러시아에 맞서 동맹군이 크림반도에서 발생하여 "크림전쟁"(Crimean War)으로 불린다.
-영화로 소개된 경기병대의 돌격 ("Charge of the Light Brigade"), 영국 간호사 플로렌스 나이팅게일의 활약, 전신과 철도의 본격적인 도입으로 큰 의미를 갖는 전쟁이기도 하다.
-많은 전투와 많은 사람들이 죽은 후, 1856년 파리 조약으로 전쟁은 마무리되어, 러시아 확장은 잠시 멈추게 돼었고, 오스만 제국도 한숨 돌린 계기가 되었다.
+크림 전쟁은 1853년부터 1856년까지 일어난 큰 전쟁이었다.
+한쪽에는 러시아, 반면 다른 한쪽에는 영국, 프랑스, 오스만 제국(현대 튀르키예), 그리고 나중에 사르디니아(현대 이탈리아의 일부)가 동맹을 구성하여 전쟁을 치렀다.
+전쟁이 바로 시작된 이유는 러시아가 오스만 제국 내 정교회 신자들을 보호하려는 명분을 내세웠지만, 사실 더 많은 영토를 차지하기 위함이었다.
+양측 간 전쟁은 흑해를 두고 남하하는 러시아에 맞서 동맹군이 크림반도에서 발생하여 "크림전쟁"(Crimean War)으로 불린다.
+영화로 소개된 경기병대의 돌격("Charge of the Light Brigade"), 영국 간호사 플로렌스 나이팅게일의 활약, 전신과 철도의 본격적인 도입으로 큰 의미를 갖는 전쟁이기도 하다.
+많은 전투와 많은 사람들이 죽은 후, 1856년 파리 조약으로 전쟁은 마무리되어, 러시아의 확장은 잠시 멈추게 되었고, 오스만 제국도 한숨 돌린 계기가 되었다.
 
-크림 전쟁 중 스쿠타리 막사는 투루키에 스쿠타리 병원(Scutari Hospital, Turkey)은  영국 군 병원으로 개조되었다. 크림전쟁에서 부상을 당한 수많은 병사가 치료를 위해 이곳으로 보내졌지만, 병자와 부상병들을 감당할 수 있도록 설계되지 않았고 제대로된 역할도 수행하지 못했다. 1854년 나이팅게일이 간호사 일행과 함께 도착했을 때, 비위생적인 환경과 고통받는 병사들을 보고 경악했다. 나이팅게일의 스쿠타리 병원에서 경험은 병원과 의료 서비스를 개선하여 이와 같은 고통과 비극이 재발하지 않도록 향후 프로젝트의 중요한 동기와 방향이 되었다.
+크림 전쟁 중 스쿠타리 막사는 튀르키예(구 터키)의 스쿠타리 병원(Scutari Hospital, Turkey)이 영국 군 병원으로 개조되었다.
+크림전쟁에서 부상을 당한 수많은 병사가 치료를 위해 이곳으로 보내졌지만, 병자와 부상병들을 감당할 수 있도록 설계되지 않았고 제대로 된 역할도 수행하지 못했다.
+1854년 나이팅게일이 간호사 일행과 함께 도착했을 때, 비위생적인 환경과 고통받는 병사들을 보고 경악했다.
+나이팅게일의 스쿠타리 병원에서의 경험은 병원과 의료 서비스를 개선하여 이와 같은 고통과 비극이 재발하지 않도록 향후 프로젝트의 중요한 동기와 방향이 되었다.
 
-![스쿠타리 병원의 한 병동 석판화 그림 (William Simpson)](images/scutari.jpg)
+![스쿠타리 병원의 한 병동 석판화 그림 (William Simpson)](images/scutari.jpg){#fig-nightingale-scutari fig-align="center"}
 
-환자의 사망율을 42%에서 2%로 낮추고 집중치료실(ICU)을 설치하여 상태가 중한 환자를 격리하여 집중관리하는 등 근대적인 간호체계를 수립하는 데 기여하였다. 
+환자의 사망률을 42%에서 2%로 낮추고 집중치료실(ICU)을 설치하여 상태가 중한 환자를 격리하여 집중 관리하는 등 근대적인 간호체계를 수립하는 데 기여했다.
 
 ### 원본 데이터
 
-크림 전쟁 중 스쿠타리 막사는 투루키에 스쿠타리 병원에서 몇년간에 걸쳐 
-수작업으로 종이에 분석가능한 형태의 자료를 만들어내는 것은 결코 쉬운 작업이 아니다.
+크림 전쟁 중 튀르키예의 스쿠타리 병원에서 몇 년간에 걸쳐 수작업으로 종이에 분석 가능한 형태의 자료를 만들어내는 것은 결코 쉬운 작업이 아니다.
 
-![원본 데이터](images/nightingale_raw_data.webp)
-
+![원본 데이터](images/nightingale_raw_data.jpg){#fig-nightingale-raw-data fig-align="center" width="299"}
 
 ### 그래프 진화
 
-[출처: [How Florence Nightingale Changed Data Visualization Forever - The celebrated nurse improved public health through her groundbreaking use of graphic storytelling](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/)]{.aside}
-
-
 복잡한 논거를 제시하는 대신 구체적인 주장에 데이터 시각화와 데이터 스토리텔링(Storytelling)을 통해 청중에 한걸음 더 다가섰다.
-나이팅게일의 스토리텔링은 열악한 위생 상태와 과밀로 인해 불필요한 죽음이 얼마나 많이 발생하는지 이해하기 쉬운 비교를 통해 이야기를 구성해서 설득해 나갔다. 
-예를 들어, 군대 사망률을 민간인 사망률(유사한 환경의 맨체스터)과 비교하는 프레임을 제시하고, 군대 막사에서 생활하는 평시 병사들이 비슷한 연령대 민간인 남성보다 더 높은 비율로 사망하는 것을 제시했다. 이를 통해, 데이터가 보여주는 현실을 부정할 수 없게 만들었고, 군대 행정에 극적인 개혁을 이끌어냈다.
+나이팅게일의 스토리텔링은 열악한 위생 상태와 과밀로 인해 불필요한 죽음이 얼마나 많이 발생하는지 이해하기 쉬운 비교를 통해 이야기를 구성해서 설득해 나갔다.
+예를 들어, 군대 사망률을 민간인 사망률(유사한 환경의 맨체스터)과 비교하는 프레임을 제시하고, 군대 막사에서 생활하는 평시 병사들이 비슷한 연령대 민간인 남성보다 더 높은 비율로 사망하는 것을 제시했다.
+이를 통해, 데이터가 보여주는 현실을 부정할 수 없게 만들었고, 군대 행정에 극적인 개혁을 이끌어냈다.
+[^tool-viz-1]
 
+[^tool-viz-1]: 출처: [How Florence Nightingale Changed Data Visualization Forever - The celebrated nurse improved public health through her groundbreaking use of graphic storytelling](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/)
 
-::: {#fig-nightingale layout-ncol=5}
+::: {#fig-nightingale layout-ncol="5"}
+![막대그래프](images/nightingale_graph_01.jpg){#fig-barchart fig-align="center" width="193"}
 
-![막대그래프](images/nightingale_graph_01.webp){#fig-barchart}
+![맨체스터 사망](images/nightingale_graph_02.jpg){#fig-circular fig-align="center" width="249"}
 
-![맨체스터 사망](images/nightingale_graph_02.webp){#fig-circular}
+![빅토리아 여왕 보고(I)](images/nightingale_graph_03.jpg){fig-align="center" width="248"}
 
-![빅토리아 여왕 보고(I)](images/nightingale_graph_03.webp){#fig-circular}
+![빅토리아 여왕 보고(II)](images/nightingale_graph_04.jpg){fig-align="center" width="247"}
 
-![빅토리아 여왕 보고(II)](images/nightingale_graph_04.webp){#fig-circular}
-
-![빅토리아 여왕 보고(III)](images/nightingale_graph_05.webp){#fig-circular}
+![빅토리아 여왕 보고(III)](images/nightingale_graph_05.jpg){fig-align="center" width="249"}
 
 나이팅게일 그래프 진화과정
 :::
 
-
 ### 설득
 
-나이팅게일은 크림 전쟁 중 병원에서의 위생 문제와 관련된 데이터를 수집하고 분석하여 그 결과를 시각화했고, 병원에서의 사망 원인 중 대부분이 감염성 질병으로 인한 것을 발견했다. 
+\index{빅토리아 여왕}
+
+나이팅게일은 크림 전쟁 중 병원에서의 위생 문제와 관련된 데이터를 수집하고 분석하여 그 결과를 시각화했고, 병원에서의 사망 원인 중 대부분이 감염성 질병으로 인한 것임을 발견했다.
 이러한 감염성 질병은 부적절한 위생 조건과 밀접한 관련이 있음을 확인했다.
 
-나이팅게일은 병원의 위생 상태를 개선을 통해 수많은 생명을 구할 수 있다는 사실을 확인했고
-연구결과와 권장 사항을 다양한 영국 정부부처에 제출했고, 특히 1858년에 영국의 장관들에게 보고서를 제출했다. 이를 통해서 군 병원의 위생 조건을 개선하는 데 큰 영향을 미쳤다.
+나이팅게일은 병원의 위생 상태 개선을 통해 수많은 생명을 구할 수 있다는 사실을 확인했고, 연구 결과와 권장 사항을 다양한 영국 정부 부처에 제출했으며, 특히 1858년에 영국의 장관들에게 보고서를 제출했다.
+이를 통해서 군 병원의 위생 조건을 개선하는 데 큰 영향을 미쳤다.
 
-![나이팅게일과 빅토리아 여왕](images/nightingale_victoria.jpg)
+![나이팅게일과 빅토리아 여왕](images/nightingale_victoria.jpg){#fig-nightingale-victoria}
 
 ### 성과와 영향
 
-나이팅게일 캠페인이 민간 공중보건에 미친 가장 큰 영향은 실현되기까지 오랜 기간에 걸쳐 다각도로 검토되었고, 마침내 1875년 영국 공중보건법(British Public Health Act)에 법제화되었다. 이 법에는 잘 정비된 하수도, 깨끗한 수돗물, 건축법 규제 등의 요건이 담겨있다.
-질병에 대한 면역력을 강화하는 백신과 농작물 수확량을 획기적으로 늘리는 인공비료 개발과 함께 이 제도적인 노력으로 평균 수명을 두 배로 늘리는 원동력이 되었다.
+\index{공중보건}
 
+나이팅게일 캠페인이 민간 공중보건에 미친 가장 큰 영향은 실현되기까지 오랜 기간에 걸쳐 다각도로 검토되었고, 마침내 1875년 영국 공중보건법(British Public Health Act)에 법제화되었다.
+이 법에는 잘 정비된 하수도, 깨끗한 수돗물, 건축법 규제 등의 요건이 담겨있다.
+질병에 대한 면역력을 강화하는 백신과 농작물 수확량을 획기적으로 늘리는 인공비료 개발과 함께 이 제도적인 노력으로 평균 수명을 두 배로 늘리는 원동력이 되었다.
 
 ## 작업과정
 
 ### 디지털 데이터
 
-[rladies/spain_nightingale](https://github.com/rladies/spain_nightingale) GitHub 
-저장소에서 엑셀 형태로 된 데이터를 가져와서 전처리할 수 있다.
+\index{R-ladies} \index{GitHub}
+
+스페인 R-ladies GitHub 저장소 [rladies/spain_nightingale](https://github.com/rladies/spain_nightingale)에서 엑셀 형태로 된 데이터를 가져와서 전처리 작업을 진행한다.
 
 ```{r}
 library(tidyverse)
@@ -110,9 +150,10 @@ HistData::Nightingale |>
 
 ### 데이터와 사투
 
-앞서 준비한 `death_tbl` 데이터프레임에서 사망 관련 데이터를 처리하고 시각화하기 위한 전처리를 수행하여 시각화를 위한 준비작업을 수행한다. 
-먼저 `Date`, `Disease.rate`, `Wounds.rate`, `Other.rate` 칼럼을 선택하고, `pivot_longer` 함수를 사용해 시각화에 적합한 데이터로 재구조화한다. 
-`str_replace_all` 함수를 사용하여 칼럼 이름에서 ".rate"를 제거하고, `ifelse` 함수를 이용해 날짜를 기준으로 나이팅게일 팀이 준비한 방식을 적용하기 전과후 "이전"과 "이후"로 체제로 구분한다. `factor` 함수를 사용하여 범주 순서를 정의하고, 마지막으로 `month` 함수를 이용해 날짜에서 해당 월을 추출하고 `death_viz`에 저장한다.
+앞서 준비한 `death_tbl` 데이터프레임에서 사망 관련 데이터를 처리하고 시각화하기 위한 전처리를 수행하여 시각화를 위한 준비작업을 수행한다.
+먼저 `Date`, `Disease.rate`, `Wounds.rate`, `Other.rate` 칼럼을 선택하고, `pivot_longer` 함수를 사용해 시각화에 적합한 데이터로 재구조화한다.
+`str_replace_all` 함수를 사용하여 칼럼 이름에서 ".rate"를 제거하고, `ifelse` 함수를 이용해 날짜를 기준으로 나이팅게일 팀이 준비한 방식을 적용하기 전과 후의 "이전"과 "이후" 체제로 구분한다.
+`factor` 함수를 사용하여 범주 순서를 정의하고, 마지막으로 `month` 함수를 이용해 날짜에서 해당 월을 추출하고 `death_viz`에 저장한다.
 
 ```{r}
 death_viz <- death_tbl %>% 
@@ -132,11 +173,14 @@ death_viz
 
 ## 시각화
 
-'ggplot2' 패키지를 이용하여 크림전쟁 나이팅게일 활약상을 담은 데이터를 시각화한다. 
-나이팅게일 활약 전과 후로 데이터(`death_viz`)를 나눠 "크림전쟁 병사 사망원인"에 대한 극좌표계 시각화를 통해 이해하기 쉬운 설득력있는 시각화 결과물을 제시하고 있다.
-추가적으로, 'showtext' 패키지로 구글 "Noto Serif KR" 글꼴을 선택적용하고, 'hrbrthemes' 라이브러리를 이용하여 뒷 배경 검정색을 사용하여 붉은색 질병으로 인한 사망자수 확연한 감소를 시각적으로 강조한다.
+\index{시각화} \index{ggplot2}
+
+'ggplot2' 패키지를 이용하여 크림전쟁 나이팅게일 활약상을 담은 데이터를 시각화한다.
+나이팅게일 활약 전과 후로 데이터(`death_viz`)를 나눠 "크림전쟁 병사 사망원인"에 대한 극좌표계 시각화를 통해 이해하기쉬운 설득력 있는 시각화 결과물을 제시하고 있다.
+추가적으로, 'showtext' 패키지로 구글 "Noto Serif KR" 글꼴을 선택 적용하고, 'hrbrthemes' 라이브러리를 이용하여 뒷배경 검정색을 사용하여 붉은색 질병으로 인한 사망자 수의 확연한 감소를 시각적으로 강조한다.
 
 ```{r}
+#| eval: false
 library(hrbrthemes) 
 library(showtext)
 showtext.auto()
@@ -159,26 +203,34 @@ death_gg <- death_viz %>%
         text = element_text(family = noto_font, size = 18),
         axis.title.y = element_blank(),
         axis.title.x = element_blank(),
-        axis.text.y = element_blank(),
         axis.ticks = element_blank(),
+        axis.text.x   = element_text(family = "MaruBuri", color = "white", size = 50),
+        axis.text.y   = element_text(family = "MaruBuri", color = "white", size = 50),
         plot.margin = unit(rep(0.7, 4), "cm"),
-        plot.title = element_text(color = "white", family = noto_font, size = 25),
-        plot.caption = element_text(color = "grey70", family = noto_font, size = 12),
-        plot.subtitle = element_text(color = "grey70", size = 13),
-        legend.text = element_text(color = "white", size = 15),
-        strip.text = element_text(color = "white", size = 25, face = "bold", family = noto_font, hjust = 0.5))
+        plot.title = element_text(color = "white", family = noto_font, size = 100),
+        plot.subtitle = element_text(color = "grey70", size = 70),
+        plot.caption = element_text(color = "grey70", family = noto_font, size = 54),
+        legend.title = element_text(color = "white", size = 70),
+        legend.text = element_text(color = "white", size = 55),
+        strip.text = element_text(color = "white", size = 80, face = "bold", family = noto_font, hjust = 0.5))
 
 death_gg
+
+ragg::agg_jpeg("images/viz_death_gg.jpeg", width = 10, height = 7, units = "in", res = 600)
+death_gg
+dev.off()
 ```
 
+![크림전쟁 병사 사망원인 조치전후 시각화](images/viz_death_gg.jpeg){#fig-viz-death-gg fig-align="center" width="450"}
 
 ### 선그래프
 
-나이팅게일은 간호 분야의 선구자로 잘 알려져 있지만, 통계학자로서 "콕스콤(CoxComb)" 또는 "장미 다이어그램"(Rose Diagram)으로 알려진 원그래프를 제시하였지만 현재는 시간의 흐름에 따라 병사 사망자수 변화를 조치 전후로 명확히 하는 방법으로 선그래프가 기본 기법으로 자리잡고 있다.
+\index{선그래프} \index{콕스콤} \index{장미 다이어그램}
+
+나이팅게일은 간호 분야의 선구자로 잘 알려져 있지만, 통계학자로서 "콕스콤(CoxComb)" 또는 "장미 다이어그램"(Rose Diagram)으로 알려진 원그래프를 제시하였지만 현재는 시간의 흐름에 따라 병사 사망자 수 변화를 조치 전후로 명확히 하는 방법으로 선그래프가 기본 기법으로 자리 잡고 있다.
 
 ```{r}
-extrafont::loadfonts()
-
+#| eval: false
 death_new_gg <- death_viz |> 
   ggplot(aes(x = Date, y = 사망자수, color = 사망원인)) +
     geom_line() +
@@ -191,13 +243,17 @@ death_new_gg <- death_viz |>
          x = "월일") + 
     scale_y_continuous(labels = scales::comma, limits = c(0, 1150)) +
     theme(legend.position = "top", 
-          text = element_text(family = noto_font, size = 18),
+          text = element_text(family = noto_font, size = 35),
           axis.ticks = element_blank(),
           plot.margin = unit(rep(0.7, 4), "cm"),
-          plot.title = element_text(color = "black", family = noto_font, size = 35),
-          plot.caption = element_text(color = "grey10", family = noto_font, size = 17),
-          plot.subtitle = element_text(color = "grey5", size = 13),
-          legend.text = element_text(color = "black", size = 15)) +
+          axis.title.x   = element_text(family = "MaruBuri", size = 45),
+          axis.title.y   = element_text(family = "MaruBuri", size = 45),
+          axis.text.x    = element_text(family = "MaruBuri", size = 35),
+          axis.text.y    = element_text(family = "MaruBuri", size = 35),
+          plot.title = element_text(color = "black", family = noto_font, size = 100),
+          plot.subtitle = element_text(color = "black", family = noto_font, size = 80),
+          plot.caption = element_text(color = "grey10", family = noto_font, size = 37),
+          legend.text = element_text(color = "black", size = 45)) +
     geom_segment(x = as.Date("1854-03-01"), y = 1100,
                  xend = as.Date("1855-03-01"), yend = 1100,
                  color = "gray70",
@@ -207,19 +263,27 @@ death_new_gg <- death_viz |>
                  color = "gray15",
                  arrow = arrow(length = unit(0.1, "inches"))) +
     annotate("text", x = as.Date("1854-09-01"), y = 1140, label = "조치이전",
-             size = 8.5, color = "gray30", family = noto_font) +
+             size = 20.5, color = "gray30", family = noto_font) +
     annotate("text", x = as.Date("1855-09-01"), y = 1140, label = "조치이후",
-             size = 8.5, color = "gray15", family = noto_font)          
+             size = 20.5, color = "gray15", family = noto_font)          
 
 death_new_gg
+
+ragg::agg_jpeg("images/death_new_gg.jpeg", width = 10, height = 7, units = "in", res = 600)
+death_new_gg
+dev.off()
 ```
+
+![크림전쟁 병사 사망원인 조치전후 선 그래프](images/death_new_gg.jpeg){#fig-death-new-gg fig-align="center" width="450"}
 
 ### 막대그래프
 
-동일한 정보를 막대그래프를 통해 시각화를 할 수도 있다. 원그래프와 비교하여 보면 명확하게 사망자수를 직관적으로 비교할 수 있다는 점에서 큰 장점이 있다.
+동일한 정보를 막대그래프를 통해 시각화를 할 수도 있다.
+원그래프와 비교하여 보면 명확하게 사망자 수를 직관적으로 비교할 수 있다는 점에서 큰 장점이 있다.
 
 ```{r}
-death_viz |> 
+#| eval: false
+death_bar_gg <- death_viz |> 
   ggplot() +
     geom_col(aes(x = Date, y = 사망자수, fill = 사망원인), colour="white") +
     geom_vline(xintercept = as.Date("1855-03-15"), linetype= 2) +
@@ -231,13 +295,18 @@ death_viz |>
          x = "월일") + 
     scale_y_continuous(labels = scales::comma, limits = c(0, 1150)) +
     theme(legend.position = "top", 
-          text = element_text(family = noto_font, size = 18),
+          text = element_text(family = noto_font, size = 35),
           axis.ticks = element_blank(),
           plot.margin = unit(rep(0.7, 4), "cm"),
-          plot.title = element_text(color = "black", family = noto_font, size = 35),
-          plot.caption = element_text(color = "grey10", family = noto_font, size = 17),
-          plot.subtitle = element_text(color = "grey5", size = 13),
-          legend.text = element_text(color = "black", size = 15)) +
+          axis.title.x   = element_text(family = "MaruBuri", size = 45),
+          axis.title.y   = element_text(family = "MaruBuri", size = 45),
+          axis.text.x    = element_text(family = "MaruBuri", size = 35),
+          axis.text.y    = element_text(family = "MaruBuri", size = 35),
+          plot.title = element_text(color = "black", family = noto_font, size = 100),
+          plot.subtitle = element_text(color = "black", family = noto_font, size = 80),
+          plot.caption = element_text(color = "grey10", family = noto_font, size = 37),
+          legend.title = element_text(color = "black", size = 70),
+          legend.text = element_text(color = "black", size = 45)) +
     geom_segment(x = as.Date("1854-03-01"), y = 1100,
                  xend = as.Date("1855-03-01"), yend = 1100,
                  color = "gray70",
@@ -250,23 +319,35 @@ death_viz |>
              size = 8.5, color = "gray30", family = noto_font) +
     annotate("text", x = as.Date("1855-09-01"), y = 1140, label = "조치이후",
              size = 8.5, color = "gray15", family = noto_font) 
+
+death_bar_gg
+
+ragg::agg_jpeg("images/death_bar_gg.jpeg", width = 10, height = 7, units = "in", res = 600)
+death_bar_gg
+dev.off()
 ```
 
+![크림전쟁 병사 사망원인 조치전후 막대 그래프](images/death_bar_gg.jpeg){#fig-death-bar-gg fig-align="center" width="450"}
 
 ## 표 문법
 
-데이터 문법, 그래프 문법에 이어 최근 "표 문법"이 새롭게 자리를 잡아가고 있다.
-표 문법에 맞춰 나이팅게일 크림전쟁 사망자수를 조치 이전과 조치 이후로 나눠 요약하면 
-확연한 차이를 파악할 수 있다.
+\index{표 문법} \index{gt}
 
-`gt`와 `gtExtras` 패키지를 활용하여 `death_viz` 데이터프레임을 사망 원인별 사망자 수를 "조치 이전"과 "조치 이후"로 구분하여 표를 두개 생성한다. 
-각 표은 날짜, 질병, 부상, 기타 범주로 사망자 수와 그 합계를 표시하며, 
-총 사망자수가 250명을 초과하는 행에 대한 강조 색상을 입히고 나서 두 표를 나란히 배치하여
-조치 전후 효과를 시각적으로 비교한다.
+데이터 문법, 그래프 문법에 이어 최근 "표 문법"이 새롭게 자리를 잡아가고 있다.
+표 문법에 맞춰 나이팅게일 크림전쟁 사망자 수를 조치 이전과 조치 이후로 나눠 요약하면 확연한 차이를 파악할 수 있다.
+
+`gt`와 `gtExtras` 패키지를 활용하여 `death_viz` 데이터프레임을 사망 원인별 사망자 수를 "조치 이전"과 "조치 이후"로 구분하여 표를 두 개 생성한다.
+각 표는 날짜, 질병, 부상, 기타 범주로 사망자 수와 그 합계를 표시하며, 총 사망자 수가 250명을 초과하는 행에 대한 강조 색상을 입히고 나서 두 표를 나란히 배치하여 조치 전후 효과를 시각적으로 비교한다.
 
 ```{r}
+#| eval: false
+#| label: fig-death-viz-table
+#| fig-cap: 조치 이전과 조치 이후 사망자 수 비교
+#| fig-align: center
+
 library(gt)
 library(gtExtras)
+library(patchwork)
 
 before_tbl <- death_viz |> 
   filter(체제 == "조치이전")
@@ -304,37 +385,17 @@ after_gt <- after_tbl |>
     method = "numeric",
     palette = "ggsci::red_material")
 
-gtExtras::gt_two_column_layout(list(before_gt, after_gt))
+# before_gt |> 
+#    gtsave("before_gt.png", path = "images")
+# after_gt  |> 
+#    gtsave("after_gt.png", path = "images")
+
+library(cowplot)
+p111 <- ggdraw() + draw_image("images/before_gt.png", scale = 1.0)
+p112 <- ggdraw() + draw_image("images/after_gt.png", scale = 0.9)
+plot_grid(p111, p112)
 
 ```
 
+![조치 전후 변화를 표 시각화](images/death_two_tables.png){#fig-death-viz-table fig-align="center" width="450"}
 
-## 커뮤니케이션
-
-데이터를 기반으로 뭔가 유용한 것을 창출한 후에 이를 알리기 위해 커뮤니케이션 단계를 거치게 된다. 가장 흔히 사용하는 방식은 엑셀, 워드, 파워포인트와 같은 MS 오피스 제품을 활용하는 방식이다. 과거 SAS, SPSS, 미니탭 등 외산 통계 팩키지로 데이터를 분석하고 유용한 모형 등을 찾아낸 후에 이를 커뮤니케이션하기 위해 MS 오피스 제품을 통해 커뮤니케이션을 하기도 했다. 하지만, 각각은 별개의 시스템으로 분리되어 있어 일일이 사람손이 가는 번거러움이 많았다. 이를 해결하기 하는 방법은 하나의 도구 혹은 언어로 모든 작업을 처리하는 것이다. [^meghan]
-
-[^meghan] : [Meghan Hall (June 15, 2021), "Extending R Markdown", RStudio: R in Sports Analytics, ](https://meghan.rbind.io/slides/rstudio/hall_rstudio_2021)
-
-우선 엑셀은 `tidyverse` 로 대체가 되고, 워드는 R 마크다운을 거쳐 쿼토(Quarto), 파워포인트도 R 마크다운(`xaringan` 등)에서 진화한 `reveal.js` 기반 쿼토 슬라이드가 빠르게 자리를 잡아가고 있다.
-
-
-![오피스 기반 커뮤니케이션 현재 상태점검](images/nightingale_office.png)
-
-
-데이터 과학을 커뮤니케이션하는 방식은 다양한 방식이 존재하지만 직장상사 뿐만 아니라 
-집단지성을 넘어 AI를 적극 도입하여 데이터 분석 역량을 고도화하는데 
-동료 개발자 및 협업하시는 분들과 커뮤니케이션 뿐만 아니라
-불특정 다수를 대상으로 한 인터넷에 공개와 공유를 통해 새로운 관계를 맺어가는 것도 
-그 중요성을 더해가고 있다.
-
-- 동료 개발자나 협업하시는 분: `.qmd` 파일
-- 직장상사
-    - PDF 파일: `quarto`, `pandoc`
-    - 파워포인트 슬라이스덱: `reveal.js` 기반 `quarto`
-    - 대쉬보드: `flexdashboard`
-- 일반 공개
-    - 웹사이트: `distill`을 지나 `quarto`
-    - 블로그: `blogdown`을 지나 `quarto`
-    - 책: `bookdown`을 지나 `quarto`
-
-![](images/nightingale_communication.jpg)
